# orchestra

./: .gitignore  AGENTS.md  README.md  agents.md  broker.md  broker_core copy.py  broker_core.py  broker_core_old.py  pyproject.toml  start_orchestra.sh
models/: worker_spec.md
models/Lightricks/: config.yaml  schema.py
models/Lightricks/LTX-2/: install.sh  test_worker.sh  test_worker_2.sh  worker.py
models/OpenGVLab/: config.yaml  schema.py
models/OpenGVLab/InternVL/: install.sh  worker.py
models/facebook/: config.yaml  schema.py
models/facebook/dino3/: install.sh
models/facebook/sam3/: install.sh  pyproject.toml  worker.py  worker_old.py
testsuite/: test_2_jobs.py
utils/: image_io.py  transport.py
