[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestra"
version = "0.1.0"
description = "Minimal orchestration scaffold for coordinating distributed model workers."
readme = "README.md"
authors = [
  {name = "Sebastian Cavada", email = "sebastian.cavada.lab@gmail.com"},  
]
maintainers = [  
]
requires-python = ">=3.12"
dependencies = [
    "pyzmq",
    "tqdm",
    "Pillow",
    "pydantic"
]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.uv.workspace]
members = [
    "workers/vlms/internvl",
]
